Fixed navbar click event on mobile (touchstart) and fixed navbar hidding behaviour on safari with -webkit-sticky

--- a/app/src/styles/includes/styles.less
+++ b/app/src/styles/includes/styles.less
@@ -15,6 +15,7 @@ hr {
 
 nav {
 	position: sticky;
+	position: -webkit-sticky;
 	top: 0px;
 	z-index: 999;
 
@@ -163,6 +164,7 @@ footer.basic-footer {
 
 footer.chapter-footer {
 	position: sticky;
+	position: -webkit-sticky;
 	left: 0px;
 	bottom: 0px;
 	z-index: 1;
